// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/invitation_modal/InvitationModal should match the snapshot 1`] = `
<RootPortal>
  <FullScreenModal
    onClose={[Function]}
    show={true}
  >
    <div
      className="InvitationModal"
      data-testid="invitationModal"
    >
      <ConfirmModal
        confirmButtonClass="btn btn-primary"
        confirmButtonText={
          <FormattedMessage
            defaultMessage="Yes, Discard"
            id="invitation-modal.discard-changes.button"
            values={Object {}}
          />
        }
        message={
          <FormattedMessage
            defaultMessage="You have unsent invitations, are you sure you want to discard them?"
            id="invitation-modal.discard-changes.message"
            values={Object {}}
          />
        }
        modalClass="invitation-modal-confirm"
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        title={
          <FormattedMessage
            defaultMessage="Discard Changes"
            id="invitation-modal.discard-changes.title"
            values={Object {}}
          />
        }
      />
      <InvitationModalInitialStep
        goToGuests={[Function]}
        goToMembers={[Function]}
        teamName="Test name"
      />
    </div>
  </FullScreenModal>
</RootPortal>
`;

exports[`components/invitation_modal/InvitationModal should match the snapshot when I have no permission to add users 1`] = `
<RootPortal>
  <FullScreenModal
    onClose={[Function]}
    show={true}
  >
    <div
      className="InvitationModal"
      data-testid="invitationModal"
    >
      <ConfirmModal
        confirmButtonClass="btn btn-primary"
        confirmButtonText={
          <FormattedMessage
            defaultMessage="Yes, Discard"
            id="invitation-modal.discard-changes.button"
            values={Object {}}
          />
        }
        message={
          <FormattedMessage
            defaultMessage="You have unsent invitations, are you sure you want to discard them?"
            id="invitation-modal.discard-changes.message"
            values={Object {}}
          />
        }
        modalClass="invitation-modal-confirm"
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        title={
          <FormattedMessage
            defaultMessage="Discard Changes"
            id="invitation-modal.discard-changes.title"
            values={Object {}}
          />
        }
      />
      <InvitationModalGuestsStep
        currentTeamId="test"
        defaultChannels={Array []}
        defaultMessage=""
        goBack={null}
        myInvitableChannels={Array []}
        onEdit={[Function]}
        onSubmit={[Function]}
        searchProfiles={[MockFunction]}
      />
    </div>
  </FullScreenModal>
</RootPortal>
`;

exports[`components/invitation_modal/InvitationModal should match the snapshot when I have no permission to invite guests 1`] = `
<RootPortal>
  <FullScreenModal
    onClose={[Function]}
    show={true}
  >
    <div
      className="InvitationModal"
      data-testid="invitationModal"
    >
      <ConfirmModal
        confirmButtonClass="btn btn-primary"
        confirmButtonText={
          <FormattedMessage
            defaultMessage="Yes, Discard"
            id="invitation-modal.discard-changes.button"
            values={Object {}}
          />
        }
        message={
          <FormattedMessage
            defaultMessage="You have unsent invitations, are you sure you want to discard them?"
            id="invitation-modal.discard-changes.message"
            values={Object {}}
          />
        }
        modalClass="invitation-modal-confirm"
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        title={
          <FormattedMessage
            defaultMessage="Discard Changes"
            id="invitation-modal.discard-changes.title"
            values={Object {}}
          />
        }
      />
      <InvitationModalMembersStep
        goBack={null}
        inviteId="test-invite-id"
        onEdit={[Function]}
        onSubmit={[Function]}
        searchProfiles={[MockFunction]}
      />
    </div>
  </FullScreenModal>
</RootPortal>
`;

exports[`components/invitation_modal/InvitationModal should match the snapshot when not show 1`] = `
<RootPortal>
  <FullScreenModal
    onClose={[Function]}
    show={false}
  >
    <div
      className="InvitationModal"
      data-testid="invitationModal"
    >
      <ConfirmModal
        confirmButtonClass="btn btn-primary"
        confirmButtonText={
          <FormattedMessage
            defaultMessage="Yes, Discard"
            id="invitation-modal.discard-changes.button"
            values={Object {}}
          />
        }
        message={
          <FormattedMessage
            defaultMessage="You have unsent invitations, are you sure you want to discard them?"
            id="invitation-modal.discard-changes.message"
            values={Object {}}
          />
        }
        modalClass="invitation-modal-confirm"
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        title={
          <FormattedMessage
            defaultMessage="Discard Changes"
            id="invitation-modal.discard-changes.title"
            values={Object {}}
          />
        }
      />
      <InvitationModalInitialStep
        goToGuests={[Function]}
        goToMembers={[Function]}
        teamName="Test name"
      />
    </div>
  </FullScreenModal>
</RootPortal>
`;
